Half width size card alignment fixed. Slider image responsiveness defined

--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -3,14 +3,15 @@
   height: 230px;
   max-width: 1280px;
   margin: 0 auto;
+  background-color: #dad8d8;
 }
 
 .sliderInner {
   height: 100%;
   width: 100%;
-  background-position: center;
+  background-position: top right;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   display: flex;
 }
 
@@ -52,4 +53,16 @@
   /* background-color: rgba(3, 3, 3, 0.041); */
   display: grid;
   place-items: center;
+}
+
+@media only screen and (min-device-width: 500px) {
+  .sliderInner {
+    /* height: 100%; */
+    /* width: 100%; */
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: 60%;
+    display: flex;
+    /* background-image: url(/public/assets/slider_base.png); */
+  }
 }
